demo2 updated code

--- a/admin_login.html
+++ b/admin_login.html
@@ -188,7 +188,7 @@
 
             if (username === 'admin' && password === 'admin') {
                 alert('Login successful!');
-                window.location.href = "admin.html"; // Redirect to admin dashboard
+                window.location.href = "admin_dashboard.html"; // Redirect to admin dashboard
             } else {
                 alert('Invalid username or password.');
             }
