--- a/user_login.html
+++ b/user_login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Volunteer Login - Disaster Management System</title>
+  <title>User Login - Disaster Management System</title>
   <!-- Include Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
 
@@ -29,11 +29,12 @@
     }
   </style>
 </head>
+
 <body class="bg-custom-orange flex items-center justify-center min-h-screen">
   <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-md">
     <div id="loginContainer" class="text-center">
       <h1 class="text-custom-blue text-2xl font-bold mb-4">DISASTER MANAGEMENT SYSTEM</h1>
-      <h2 class="text-2xl font-semibold mb-6">Volunteer Log in</h2>
+      <h2 class="text-2xl font-semibold mb-6">Log in</h2>
       <form id="loginForm" onsubmit="event.preventDefault(); handleLogin();" class="mb-8">
         <div class="mb-4">
           <label for="loginEmail" class="block text-sm font-medium">Email address</label>
@@ -44,6 +45,7 @@
           <input type="password" id="loginPassword" class="mt-1 block w-full border border-gray-300 rounded-md p-2" required>
         </div>
         <button type="submit" class="button-orange text-white px-4 py-2 rounded-md w-full mb-4">Log in</button>
+        <button type="button" onclick="goToHome()" class="button-orange text-white px-4 py-2 rounded-md w-full">Go to Home</button>
       </form>
       <div class="text-center">
         <p class="mb-4">Don't have an account? <a href="#" onclick="toggleSignup()" class="text-custom-blue">Sign up</a></p>
@@ -52,7 +54,7 @@
 
     <div id="signupContainer" class="hidden text-center">
       <h1 class="text-custom-blue text-2xl font-bold mb-4">DISASTER MANAGEMENT SYSTEM</h1>
-      <h2 class="text-2xl font-semibold mb-6">Volunteer Sign up</h2>
+      <h2 class="text-2xl font-semibold mb-6">Sign up</h2>
       <form id="signupForm" onsubmit="event.preventDefault(); handleSignup();">
         <div class="mb-4">
           <label for="signupEmail" class="block text-sm font-medium">Email</label>
@@ -79,6 +81,7 @@
           <input type="text" id="signupPhoneNumber" class="mt-1 block w-full border border-gray-300 rounded-md p-2" required>
         </div>
         <button type="submit" class="button-orange text-white px-4 py-2 rounded-md w-full mb-4">Sign up</button>
+        <button type="button" onclick="goToHome()" class="button-orange text-white px-4 py-2 rounded-md w-full">Go to Home</button>
         <p class="text-center">Already have an account? <a href="#" onclick="toggleSignup()" class="text-custom-blue">Log in</a></p>
       </form>
     </div>
@@ -86,16 +89,17 @@
 
   <!-- Firebase Initialization -->
   <script>
-    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    // Replace the following with your Firebase project configuration
     const firebaseConfig = {
-        apiKey: "AIzaSyAj6Oqcr0eRbJg4M0hK9inAOLSmtHyjAVI",
-        authDomain: "dmse-9d4f8.firebaseapp.com",
-        databaseURL: "https://dmse-9d4f8-default-rtdb.firebaseio.com",
-        projectId: "dmse-9d4f8",
-        storageBucket: "dmse-9d4f8.appspot.com",
-        messagingSenderId: "219529746323",
-        appId: "1:219529746323:web:9aed2195ad73640924ba66"
-    };
+      apiKey: "YOUR_FIREBASE_API_KEY_HERE",
+      authDomain: "dmse-9d4f8.firebaseapp.com",
+      databaseURL: "https://dmse-9d4f8-default-rtdb.firebaseio.com",
+      projectId: "dmse-9d4f8",
+      storageBucket: "dmse-9d4f8.appspot.com",
+      messagingSenderId: "219529746323",
+      appId: "1:219529746323:web:9aed2195ad73640924ba66",
+      measurementId: "G-BMQNH87EMJ"
+  };
 
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
@@ -103,6 +107,11 @@
 
   <!-- Main JavaScript -->
   <script>
+    // Function to navigate to index.html
+    function goToHome() {
+      window.location.href = "index.html";
+    }
+
     // Sign Up function
     function handleSignup() {
       const email = document.getElementById('signupEmail').value;
@@ -117,25 +126,26 @@
         return;
       }
 
-      // Create a unique volunteer ID
-      const volunteerId = firebase.database().ref().child('volunteers').push().key;
+      // Create a unique user ID (you can use push().key or any other method)
+      const userId = firebase.database().ref().child('citizens').push().key;
 
-      // Save volunteer data to Firebase Realtime Database
-      firebase.database().ref('volunteers/' + volunteerId).set({
-        volunteerId: volunteerId,
+      // Save user data to Firebase Realtime Database
+      firebase.database().ref('citizens/' + userId).set({
+        userId: userId,
         email: email,
         password: password, // In production, hash the password before storing
         name: name,
         city: city,
         phoneNumber: phoneNumber,
-        assignedShelter: null,
-        tasks: []
+        checkInStatus: false,
+        currentDisasterId: null,
+        checkedInShelter: null
       }).then(() => {
-        alert("Volunteer signed up successfully!");
+        alert("User signed up successfully!");
         document.getElementById('signupForm').reset();
         toggleSignup(); // Switch to login form after signup
       }).catch((error) => {
-        alert("Error saving volunteer data: " + error.message);
+        alert("Error saving user data: " + error.message);
       });
     }
 
@@ -144,37 +154,37 @@
       const email = document.getElementById('loginEmail').value;
       const password = document.getElementById('loginPassword').value;
 
-      // Retrieve the volunteers data
-      firebase.database().ref('volunteers').once('value').then((snapshot) => {
-        const volunteers = snapshot.val();
+      // Retrieve the citizens data
+      firebase.database().ref('citizens').once('value').then((snapshot) => {
+        const citizens = snapshot.val();
         let authenticated = false;
-        let currentVolunteer = null;
+        let currentUser = null;
 
-        // Loop through volunteers to find a matching email and password
-        for (let volunteerId in volunteers) {
-          const volunteer = volunteers[volunteerId];
-          if (volunteer.email === email && volunteer.password === password) {
+        // Loop through citizens to find a matching email and password
+        for (let userId in citizens) {
+          const user = citizens[userId];
+          if (user.email === email && user.password === password) {
             authenticated = true;
-            currentVolunteer = volunteer;
+            currentUser = user;
             break;
           }
         }
 
         if (authenticated) {
-          // Store volunteer data in sessionStorage
-          sessionStorage.setItem('volunteerId', currentVolunteer.volunteerId);
-          sessionStorage.setItem('volunteerName', currentVolunteer.name);
-          sessionStorage.setItem('volunteerCity', currentVolunteer.city);
-          sessionStorage.setItem('assignedShelter', currentVolunteer.assignedShelter || '');
+          // Store user data in sessionStorage
+          sessionStorage.setItem('userId', currentUser.userId);
+          sessionStorage.setItem('userName', currentUser.name);
+          sessionStorage.setItem('userCity', currentUser.city);
+          sessionStorage.setItem('currentDisasterId', currentUser.currentDisasterId || '');
 
-          // Redirect to volunteer dashboard
-          window.location.href = "volunteer_dashboard.html";
+          // Redirect to dashboard
+          window.location.href = "users_dashboard.html";
         } else {
           alert("Invalid email or password. Please try again.");
         }
 
       }).catch((error) => {
-        alert("Error retrieving volunteer data: " + error.message);
+        alert("Error retrieving user data: " + error.message);
       });
     }
 
