demo2 changes updated

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 
         // Redirect to Citizen login/signup page
         document.getElementById('citizen-btn').addEventListener('click', function() {
-            window.location.href = "citizen.html"; // Replace with actual page
+            window.location.href = "user_login.html"; // Replace with actual page
         });
 
                 // Redirect to Citizen login/signup page
