--- a/admin_login.html
+++ b/admin_login.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Login - Disaster Management System</title>
+    <!-- Include Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body, html {
@@ -15,7 +15,7 @@
             justify-content: center;
             align-items: center;
             background: rgba(0, 0, 0, 0.5); /* Slight dark overlay for more contrast */
-            width:100% ;
+            width: 100%;
         }
 
         .background-image {
@@ -64,8 +64,6 @@
         .rain-container div:nth-child(7) { left: 70%; animation-duration: 1.1s; }
         .rain-container div:nth-child(8) { left: 80%; animation-duration: 0.9s; }
         .rain-container div:nth-child(9) { left: 90%; animation-duration: 1s; }
-
-
 
         .card {
             background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent white */
@@ -116,6 +114,22 @@
             background-color: #ff3f31;
         }
 
+        .home-button {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            background-color: #ff6f61;
+            color: white;
+            padding: 8px 12px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .home-button:hover {
+            background-color: #ff3f31;
+        }
+
         .typing-text {
             font-size: 1.2rem;
             font-weight: bold;
@@ -161,6 +175,9 @@
     <div class="background-image"></div>
 
     <div class="card">
+        <!-- Home Button -->
+        <button class="home-button" onclick="window.location.href='index.html';">Home</button>
+
         <h2 class="text-2xl font-bold mb-4">Admin Login</h2>
         <form id="loginForm">
             <div class="form-group">
