--- a/volunteer_login.html
+++ b/volunteer_login.html
@@ -31,6 +31,12 @@
 </head>
 <body class="bg-custom-orange flex items-center justify-center min-h-screen">
   <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-md">
+
+    <!-- Home Button -->
+    <div class="text-right mb-4">
+      <a href="index.html" class="text-custom-blue underline">Home</a>
+    </div>
+
     <div id="loginContainer" class="text-center">
       <h1 class="text-custom-blue text-2xl font-bold mb-4">DISASTER MANAGEMENT SYSTEM</h1>
       <h2 class="text-2xl font-semibold mb-6">Volunteer Log in</h2>
@@ -88,13 +94,13 @@
   <script>
     // For Firebase JS SDK v7.20.0 and later, measurementId is optional
     const firebaseConfig = {
-        apiKey: "AIzaSyAj6Oqcr0eRbJg4M0hK9inAOLSmtHyjAVI",
-        authDomain: "dmse-9d4f8.firebaseapp.com",
-        databaseURL: "https://dmse-9d4f8-default-rtdb.firebaseio.com",
-        projectId: "dmse-9d4f8",
-        storageBucket: "dmse-9d4f8.appspot.com",
-        messagingSenderId: "219529746323",
-        appId: "1:219529746323:web:9aed2195ad73640924ba66"
+      apiKey: "AIzaSyAj6Oqcr0eRbJg4M0hK9inAOLSmtHyjAVI",
+      authDomain: "dmse-9d4f8.firebaseapp.com",
+      databaseURL: "https://dmse-9d4f8-default-rtdb.firebaseio.com",
+      projectId: "dmse-9d4f8",
+      storageBucket: "dmse-9d4f8.appspot.com",
+      messagingSenderId: "219529746323",
+      appId: "1:219529746323:web:9aed2195ad73640924ba66"
     };
 
     // Initialize Firebase
