--- a/volunteer_tasks.html
+++ b/volunteer_tasks.html
@@ -22,7 +22,7 @@
   <style>
     /* Custom colors */
     .bg-custom-orange {
-      background-color: #f28c4f;
+      background-color: #a52c12;
     }
     .text-custom-blue {
       color: #5b5fd2;
