--- a/adminadd.html
+++ b/adminadd.html
@@ -15,7 +15,7 @@
             padding: 0;
             height: 100%;
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            background-color: #a52c12;
         }
 
         .header {
