--- a/volunteer_login.html
+++ b/volunteer_login.html
@@ -13,7 +13,7 @@
   <!-- Custom Styles -->
   <style>
     .bg-custom-orange {
-      background-color: #f29c76;
+      background-color: #a52c12;
     }
     .text-custom-blue {
       color: #5b5fd2;
