--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -28,7 +28,7 @@
       color: #5b5fd2;
     }
     .button-orange {
-      background-color: #f28c4f;
+      background-color: #a52c12;
     }
     .button-orange:hover {
       background-color: #f17b3a;
