--- a/users_chat.html
+++ b/users_chat.html
@@ -110,7 +110,7 @@
     }
 
     .suggested-question {
-      background-color: #f28c4f;
+      background-color:#a52c12;
       color: white;
       padding: 8px 12px;
       border-radius: 20px;
