--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -222,7 +222,7 @@
 
     <header>
         <nav>
-            <h1>Disaster Management System</h1>
+           <h1 style="color: white;">Disaster Management System</h1>
         </nav>
         <!-- Theme toggle button -->
         <button class="theme-toggle-btn" id="theme-toggle-btn">Dark Mode</button>
