--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             /* Dark theme colors */
             --bg-color: #181818;
             --text-color: #f4f4f4;
-            --header-bg-color: #333;
+            --header-bg-color: black;
             --card-bg-color: rgba(255, 255, 255, 0.1);
             --inner-card-bg-color: rgba(255, 255, 255, 0.1);
             --button-bg-color: #5b5fd2;
