--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         }
 
         header {
-            background-color: var(--header-bg-color);
+          background-color: #d10000;
             padding: 20px;
             color: white;
             text-align: center;
