--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             --header-bg-color: #ff6f61;
             --card-bg-color: rgba(255, 255, 255, 0.1);
             --inner-card-bg-color: rgba(0, 0, 0, 0.3);
-            --button-bg-color: #ff6f61;
+            --button-bg-color: #d10000;
             --button-hover-bg-color: #ff3f31;
             --footer-bg-color: #333;
             --footer-text-color: #fff;
