--- a/volunteer_login.html
+++ b/volunteer_login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Volunteer Login - Disaster Management System</title>
@@ -19,7 +19,7 @@
       color: #5b5fd2;
     }
     .button-orange {
-      background-color: #f28c4f;
+      background-color: #d10000;
     }
     .button-orange:hover {
       background-color: #f17b3a;
