--- a/volunteer_dashboard.html
+++ b/volunteer_dashboard.html
@@ -29,7 +29,7 @@
       color: #5b5fd2;
     }
     .button-orange {
-      background-color: #f28c4f;
+      background-color: #d10000;
     }
     .button-orange:hover {
       background-color: #f17b3a;
