--- a/volunteer_shelter.html
+++ b/volunteer_shelter.html
@@ -110,7 +110,7 @@
       <a href="volunteer_resources.html" class="block px-4 py-2 rounded hover:bg-orange-600">Resources</a>
     </nav>
     <div class="p-4">
-      <button onclick="handleLogout()" class="button-orange text-white w-full py-2 rounded">Logout</button>
+      <button onclick="handleLogout()" class="button-orange text-white w-full py-2 rounded" style="background-color: #d10000;>Logout</button>
     </div>
   </div>
 
