--- a/volunteer_shelter.html
+++ b/volunteer_shelter.html
@@ -1,5 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
   <!-- Meta Tags -->
   <meta charset="UTF-8">
@@ -110,7 +111,7 @@
       <a href="volunteer_resources.html" class="block px-4 py-2 rounded hover:bg-orange-600">Resources</a>
     </nav>
     <div class="p-4">
-      <button onclick="handleLogout()" class="button-orange text-white w-full py-2 rounded" style="background-color: #d10000;>Logout</button>
+      <button onclick="handleLogout()" class="button-orange text-white w-full py-2 rounded" style="background-color: #d10000;">Logout</button>
     </div>
   </div>
 
