--- a/user_login.html
+++ b/user_login.html
@@ -1,5 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
   <meta charset="UTF-8">
   <title>User Login - Disaster Management System</title>
@@ -19,7 +20,7 @@
       color: #5b5fd2;
     }
     .button-orange {
-      background-color: #f28c4f;
+      background-color:  #d10000;
     }
     .button-orange:hover {
       background-color: #f17b3a;
