--- a/users_dashboard.html
+++ b/users_dashboard.html
@@ -24,6 +24,7 @@
     /* Custom colors */
     .bg-custom-orange {
       background-color: #a52c12;
+      color:black;
     }
     .text-custom-blue {
       color: black;
@@ -35,7 +36,7 @@
       background-color: #f17b3a;
     }
     .text-custom-light-gray {
-      color: #a1a1aa;
+       color: black;
     }
     /* Active Navbar Highlight */
     .active-nav {
