--- a/users_dashboard.html
+++ b/users_dashboard.html
@@ -98,24 +98,27 @@
   </div>
 
   <!-- Main Content -->
-  <div class="flex-1 bg-white p-6 overflow-auto">
-    <div class="flex justify-between items-center mb-6">
-      <h1 class="text-3xl font-bold text-custom-blue">Welcome, <span id="welcomeUsername">User</span>!</h1>
-    </div>
-
-    <!-- Dashboard Summary -->
-    <section id="dashboard" class="mb-6">
-      <h2 class="text-2xl font-semibold text-custom-blue mb-4">Dashboard Summary</h2>
-      <!-- Alerts -->
-      <div id="alertContainer" class="mb-6">
-        <!-- Alerts will be dynamically inserted here -->
-      </div>
-      <!-- All Disasters -->
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6" id="allDisasterCards">
-        <!-- Disaster cards will be dynamically inserted here -->
-      </div>
-    </section>
+<div 
+  class="flex-1 bg-white p-6 overflow-auto" 
+  tabindex="0" 
+  aria-label="Main content area for the Disaster Management System dashboard, scrollable content">
+  <div class="flex justify-between items-center mb-6">
+    <h1 class="text-3xl font-bold text-custom-blue">Welcome, <span id="welcomeUsername">User</span>!</h1>
   </div>
+
+  <!-- Dashboard Summary -->
+  <section id="dashboard" class="mb-6">
+    <h2 class="text-2xl font-semibold text-custom-blue mb-4">Dashboard Summary</h2>
+    <!-- Alerts -->
+    <div id="alertContainer" class="mb-6">
+      <!-- Alerts will be dynamically inserted here -->
+    </div>
+    <!-- All Disasters -->
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6" id="allDisasterCards">
+      <!-- Disaster cards will be dynamically inserted here -->
+    </div>
+  </section>
+</div>
 
   <!-- Main JavaScript -->
   <script>
