--- a/users_disaster.html
+++ b/users_disaster.html
@@ -1,5 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
   <!-- Meta Tags -->
   <meta charset="UTF-8">
@@ -23,18 +24,19 @@
     /* Custom colors */
     .bg-custom-orange {
       background-color: #a52c12;
+      color:black;
     }
     .text-custom-blue {
-      color: #5b5fd2;
+      color: black;
     }
     .button-orange {
-      background-color: #f28c4f;
+      background-color:  #d10000;
     }
     .button-orange:hover {
       background-color: #f17b3a;
     }
     .text-custom-light-gray {
-      color: #a1a1aa;
+      color: black;
     }
     /* Active Navbar Highlight */
     .active-nav {
