--- a/users_chat.html
+++ b/users_chat.html
@@ -55,7 +55,7 @@
     }
 
     .chatbot-header {
-      background-color: #5b5fd2; /* Medium Blue */
+      background-color: black /* Medium Blue */
       color: white;
       padding: 10px;
       text-align: center;
@@ -197,8 +197,9 @@
       </div>
       <div class="chatbot-footer p-2 border-t border-gray-300">
         <div class="flex">
+          <label for="chatbotInput" class="sr-only">Type your message</label>
           <input type="text" id="chatbotInput" class="flex-1 border border-gray-300 rounded-md p-2" placeholder="Type your message...">
-          <button onclick="handleUserInput()" class="button-orange text-white px-4 py-2 rounded-md ml-2">Send</button>
+          <button onclick="handleUserInput()" class="button-orange text-white px-4 py-2 rounded-md ml-2" aria-label="Send Message">Send</button>
         </div>
       </div>
     </div>
