--- a/users_chat.html
+++ b/users_chat.html
@@ -55,7 +55,7 @@
     }
 
     .chatbot-header {
-      background-color: black /* Medium Blue */
+      background-color:  #d10000;
       color: white;
       padding: 10px;
       text-align: center;
@@ -189,7 +189,7 @@
   <!-- Main Content -->
   <div class="flex-1 bg-white p-6 overflow-auto flex justify-center items-center">
     <div class="chatbot-window flex flex-col" id="chatbotWindow">
-      <div class="chatbot-header">
+     <div class="chatbot-header" style="background-color: #d10000; color:white">
         <strong>Chatbot</strong>
       </div>
       <div class="chatbot-body flex-grow p-2" id="chatbotBody">
