--- a/users_chat.html
+++ b/users_chat.html
@@ -190,7 +190,7 @@
   <div class="flex-1 bg-white p-6 overflow-auto flex justify-center items-center">
     <div class="chatbot-window flex flex-col" id="chatbotWindow">
      <div class="chatbot-header" style="background-color: #d10000; color:white">
-        <strong>Chatbot</strong>
+        <h3>Chatbot</h3>
       </div>
       <div class="chatbot-body flex-grow p-2" id="chatbotBody">
         <!-- Chat messages will appear here -->
