--- a/admin_login.html
+++ b/admin_login.html
@@ -1,5 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Admin Login - Disaster Management System</title>
@@ -101,7 +102,7 @@
         }
 
         .form-button {
-            background-color: #ff6f61;
+            background-color: #d10000;
             color: white;
             padding: 10px 15px;
             border: none;
