--- a/admin_login.html
+++ b/admin_login.html
@@ -119,7 +119,7 @@
             position: absolute;
             top: 10px;
             left: 10px;
-            background-color: #ff6f61;
+            background-color:#d10000;
             color: white;
             padding: 8px 12px;
             border: none;
